Fix implementation of cart item info for first item only; seems easier and might align more with best practices

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -82,10 +82,18 @@ body {
     flex-direction: column;
 }
 
-.item {
+/* original version */
+/* .item {
     display: flex;
     justify-content: space-between;
     width: 95%;
+    padding: 15px;
+} */
+
+.item {
+    display: flex;
+    /* justify-content: space-around; */
+    width: 100%;
     padding: 15px;
 }
 
@@ -118,6 +126,37 @@ body {
     width: auto;
     height: auto; */
 }
+.cart-item-info {
+    display: flex;
+    flex-direction: column;
+    width: 75%;
+    padding: 0 20px;
+    /* justify-content: space-between; */
+}
+
+.item-info-r1 {
+    display: flex;
+    justify-content: space-between;
+    flex: 1;
+}
+
+.item-info-r2 {
+    display: flex;
+    flex: 2;
+}
+
+.item-info-r3 {
+    display: flex;
+}
+
+/* original version */
+    /* height: 100%; */
+/* .item-description-wrapper {
+    display: flex;
+    flex-direction: column;
+    padding: 0 15px;
+    flex: 2
+} */
 
 .item-description-wrapper {
     display: flex;
@@ -136,10 +175,19 @@ body {
     align-self: flex-start;
 }
 
-.price-delete-wrapper {
+/* original version */
+/* .price-delete-wrapper {
     padding: 0 5px;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     justify-content: space-between;
+} */
+
+.price-delete-wrapper {
+    /* padding: 0 5px; */
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* align-items: flex-end; */
+    /* justify-content: space-between; */
 }
